--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 		<div class="footerbox">
 			<h2>Contacto</h2>
 			<p>
-				F.lillo@odream.cl<br> 
-				Avenida Siempre Viva #4380<br>
-				+56 9 76 17 2930
+				daniel@odream.com<br> 
+				Ecuador, Avenida Sprintfields #312<br>
+				+593 9435 03490
 			</p>
 		</div>
 		<div class="footerbox">
 			<h2>Términos</h2>
 			<p>
-				Conoce más acerca de Nuestros Terminos y Condiciones
+				Conoce más acerca de Nuestros Términos y Condiciones
 			</p>
 		</div>
 		<div class="footerbox">
@@ -62,8 +62,8 @@
 		<div class="footerbox">
 			<h2>Derechos</h2>
 			<p>
-				Guicharrousse<br>
-				<span>&copy; Todos los derechos Reservados - 2017</span>
+				DanDan<br>
+				<span>&copy; Todos los derechos Reservados - 2018</span>
 			</p>
 		</div>
 	</footer>
